<resources>
    <string name="app_name">ScrubS Quiz</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="name">Name</string>
    <string name="check_the_correct_answer_below">Check the correct answer below!</string>
    <string name="where_do_the_characters_work_in_the_show">Where do the characters work in the show?</string>
    <string name="sacred_heart_hospital">Sacred Heart Hospital</string>
    <string name="seattle_grace">Seattle Grace</string>
    <string name="princeton_plainsboro_teaching_hospital">Princeton-Plainsboro Teaching Hospital</string>
    <string name="what_is_the_name_of_the_show_s_narrator_and_main_character">What is the name of the show\'s narrator and main character?</string>
    <string name="check_the_correct_answer">Check the correct answer!</string>
    <string name="nurse_carla_espinosa">Nurse Carla Espinosa</string>
    <string name="dr_john_quot_j_d_quot_dorian">Dr. John \"J.D.\" Dorian</string>
    <string name="snoop_dogg_intern">Snoop Dogg Intern</string>
    <string name="on_the_pilot_episode_jd_fantasizes_about_having_a_family_with_elliot_in_which_sitcoms_living_room_does_the_fantasy_take_place">On the Pilot Episode, JD fantasizes about having a Family with Elliot. In which Sitcom\'s living room does the fantasy take place?</string>
    <string name="friends">Friends</string>
    <string name="home_improvement">Home Improvement</string>
    <string name="my_wife_and_kids">My Wife and Kids</string>
    <string name="to_which_studio_does_the_show_belong_to">To which studio does the show belong to?</string>
    <string name="type_the_correct_answer">Type the correct answer!</string>
    <string name="type_your_answer_here">Type your answer here</string>
    <string name="where_did_the_show_air_is_streamed">Where did the show air/is or was streamed?</string>
    <string name="check_the_correct_answer_s">Check the correct answer(s)!</string>
    <string name="abc">ABC</string>
    <string name="nbc">NBC</string>
    <string name="netflix">Netflix</string>
    <string name="hulu">Hulu</string>
    <string name="we_get_to_know_in_season_8_the_janitor_s_name">We get to know in Season 8 the Janitor\'s name.</string>
    <string name="false_answer">False</string>
    <string name="true_answer">True</string>
    <string name="summary">Summary</string>
    <string name="your_score_will_appear_here_after_you_have_hit_the_quot_submit_quot_button">Your score will appear here after you have hit the \"SUBMIT\" button!</string>
    <string name="reset">reset</string>
    <string name="submit">Submit</string>
    <string name="send">SEND</string>
    <string name="dear"><b>Dear Dr.</b></string>
    <string name="score_of_player"><b>\nYour score is:&#160;</b></string>
    <string name="outof">&#160;out of 17.</string>
    <string name="diagnosis"><b>\nDiagnosis:&#160;</b></string>
    <string name="congrats"><b>\nCongratulations!</b></string>
    <string name="healthy_report"><b>\nRecommendation:</b> No special medication required; the patient is in great health.</string>
    <string name="diagnosis_healthy">Patient is diagnosed with great ScrubS fewer.</string>
    <string name="diagnosis_sick">Patient is diagnosed with severe ScrubS deprivation.</string>
    <string name="sick_report">\n<b>Recommendation:</b> A subscription of 8 + 1 Seasons of ScrubS binge ASAP.</string>
    <string name="submit_subject"><b>Results of:</b>&#160;</string>
</resources>
